After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753765 - Wrong selection selection rectangle when user moves out of the window
Wrong selection selection rectangle when user moves out of the window
Status: RESOLVED FIXED
Product: vinagre
Classification: Applications
Component: RDP
unspecified
Other Linux
: Normal normal
: ---
Assigned To: vinagre-maint
vinagre-maint
Depends on:
Blocks:
 
 
Reported: 2015-08-18 14:51 UTC by Marek Kašík
Modified: 2015-08-21 08:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix selection rectangle when user leaves window (1.63 KB, patch)
2015-08-18 14:51 UTC, Marek Kašík
committed Details | Review

Description Marek Kašík 2015-08-18 14:51:30 UTC
Created attachment 309479 [details] [review]
Fix selection rectangle when user leaves window

When user moves out of vinagre's window during selection of e.g. icons the selection square jumps to the opposite side (when moving of the window to the left or up).

This is caused by passing negative values to RDP events.

Attached patch fixes this.
Comment 1 David King 2015-08-21 08:17:48 UTC
Review of attachment 309479 [details] [review]:

Pushed to master as commit 41571de3caa1638cf87b27ec007867245a4cc176, with a minor addition to the commit message.