Fix selection rectangle when user leaves window

Use zero instead of negative values for coordinates of mouse events.

https://bugzilla.gnome.org/show_bug.cgi?id=753765